<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StatusShare</string>

    <string name="login_username">username</string>
    <string name="login_password">password</string>


    <string name="description_sign_out">Sign out</string>
    <string name="description_about">About</string>
    <string name="description_avatar">avatar</string>

    <string name="author_update_list_title">Last 5 Updates</string>
    <string name="desc_avatar">avatar</string>
    <string name="desc_picture">picture</string>

    <string name="post_update">post update</string>
    <string name="latest_updates">latest updates</string>
    <string name="description_status_post">Edit Status</string>




    <string name="login_text">Log In</string>
    <string name="signup_link">New to StatusShare? Sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="description_sign_up">Create a new account</string>
    <string name="confirm_password">Confirm password</string>

    <string name="title_about">About</string>
    <string name="about_msg">&lt;strong&gt;Kinvey, Inc. 2013&lt;/strong&gt;&lt;br&gt;Version 2.0</string>
    <string name="about_ok">OK</string>
    <string name="profile_username"></string>
    <string name="profile_password"></string>
    <string name="profile_firstname"></string>
    <string name="profile_lastname"></string>
    <string name="profile_phonenumber"></string>

    <string name="description_refresh">Refresh</string>
    <string name="description_preview">Image Preview</string>
    <string name="description_send">Send Status</string>
    <string name="description_profile">Edit Profile</string>
    <string name="hint_update">Type message</string>

    <string name="empty"></string>
    <string name="default_duration">0:00</string>
    <string name="ui_custom_track_list">This activity plays a custom list of tracks</string>
    <string name="no_results">No results found</string>

</resources>
