<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="25pt"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:id="@+id/profile_username"
                        android:text="@string/profile_username"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="40dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:layout_marginTop="20dp"
                        android:id="@+id/profile_password"
                        android:inputType="textPassword"
                        android:text="@string/profile_password"/>



                </LinearLayout>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:id="@+id/profile_firstname"
                android:text="@string/profile_firstname"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:id="@+id/profile_lastname"
                android:text="@string/profile_lastname"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:id="@+id/profile_phonenumber"
                android:text="@string/profile_phonenumber"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="400px"
                android:text="Save"
                android:id="@+id/profile_save"
                android:gravity="center"
                android:enabled="true"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>